--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
                     <div class="col-sm-4">
                         <input type="text" class="form-control" name="num" id="num" value="0">
                     </div>
-                    </div>
-                </fieldset>
                 <div class="form-group row">
                     <div class="offset-sm-2 col-sm-10">
                         <button type="button" class="btn btn-primary">Převeď</button>
@@ -50,6 +48,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <<script src="main.js"></script>
 </body>
 
 </html>
